# ESP-IDF_SC01-Plus

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
components/esp_lcd_st7796/: CMakeLists.txt  esp_lcd_panel_st7796.c
components/esp_lcd_st7796/include/: esp_lcd_panel_st7796.h
components/sc01_plus/: CMakeLists.txt  README.md  idf_component.yml  sc01_plus.c
components/sc01_plus/include/bsp/: esp-bsp.h  sc01_plus.h
components/wt32_sc01_plus/: CMakeLists.txt  README.md  idf_component.yml  wt32_sc01_plus.c
components/wt32_sc01_plus/include/bsp/: esp-bsp.h  wt32_sc01_plus.h
main/: CMakeLists.txt  Kconfig.projbuild  dispaly_lvgl_demos_main.c  idf_component.yml  main.c
main/lvgl_demo_ui/: lvgl_demo_ui.c
main/lvgl_demo_ui/include/: lvgl_demo_ui.h
